back: remodeling end-point for sections [wip]
