# server/src/const/const.js
@@ -3,7 +3,16 @@ module.exports = {
   POST_TIME_TO_UPDATE: 1000 * 60 * 10, // 10 min
   COMMENT_TIME_TO_UPDATE: 1000 * 60 * 10, // 10 min
   POST_RATE_VALUE: 1,
+  POST_SECTION_TYPES: {
+    TEXT: 'text',
+    PICTURE: 'pic',
+    VIDEO: 'vid',
+  },
+  POST_SECTIONS_MAX: 8,
+  POST_SECTIONS_MAX_LENGTH: 10000,
+  POST_TITLE_MAX_LENGTH: 40,
   COMMENT_RATE_VALUE: 0.5,
   USER_MAX_BIO_LENGTH: 300,
   USER_MAX_AVATAR_LENGTH: 150,
+
 };
